--- a/public/index.html
+++ b/public/index.html
@@ -71,4 +71,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://widget-convert.bancor.network/v1" />
 </html>
