updated website decription

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <meta
       name="description"
-      content="Invest in alternative assets without a broker and receive revenue instantly."
+      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
     />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
@@ -33,7 +33,7 @@
     <meta name="twitter:title" content="MyBit" />
     <meta
       name="twitter:description"
-      content="Invest in alternative assets without a broker and receive revenue instantly."
+      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
     />
     <meta name="twitter:creator" content="@MyBit_DApp" />
     <meta
@@ -50,7 +50,7 @@
     />
     <meta
       property="og:description"
-      content="Invest in alternative assets without a broker and receive revenue instantly."
+      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
     />
     <meta property="og:site_name" content="MyBit" />
     <title>MyBit Go</title>
