--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://hosted-sip.civic.com/css/civic-modal.min.css">
     <meta
       name="description"
       content="Invest in alternative assets without a bank or broker and receive revenue instantly."
@@ -54,6 +55,8 @@
     />
     <meta property="og:site_name" content="MyBit" />
     <title>MyBit Go</title>
+
+    <script src="https://hosted-sip.civic.com/js/civic.sip.min.js"></script>
   </head>
   <body>
     <noscript>
@@ -71,5 +74,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="https://widget-convert.bancor.network/v1" />
+  <script src="https://widget-convert.bancor.network/v1"></script>
 </html>
