website description change; asset manager page => next button is now to the right

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://hosted-sip.civic.com/css/civic-modal.min.css">
     <meta
       name="description"
-      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
+      content="Invest without a bank or broker and receive revenue instantly."
     />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
@@ -34,7 +34,7 @@
     <meta name="twitter:title" content="MyBit" />
     <meta
       name="twitter:description"
-      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
+      content="Invest without a bank or broker and receive revenue instantly."
     />
     <meta name="twitter:creator" content="@MyBit_DApp" />
     <meta
@@ -51,7 +51,7 @@
     />
     <meta
       property="og:description"
-      content="Invest in alternative assets without a bank or broker and receive revenue instantly."
+      content="Invest without a bank or broker and receive revenue instantly."
     />
     <meta property="og:site_name" content="MyBit" />
     <title>MyBit Go</title>
