manage asset page completed

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     />
     <meta property="og:site_name" content="MyBit" />
     <title>MyBit Go</title>
-
+    <script src="//gw.alipayobjects.com/os/antv/assets/data-set/0.8.6/data-set.min.js"></script>
     <script src="https://hosted-sip.civic.com/js/civic.sip.min.js"></script>
   </head>
   <body>
