--- a/public/index.html
+++ b/public/index.html
@@ -3,73 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <meta
-      name="description"
-      content="Invest without a bank or broker and receive revenue instantly."
-    />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="/static/favicons/ms-icon-144x144.png"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@MyBit_DApp" />
-    <meta name="twitter:title" content="MyBit" />
-    <meta
-      name="twitter:description"
-      content="Invest without a bank or broker and receive revenue instantly."
-    />
-    <meta name="twitter:creator" content="@MyBit_DApp" />
-    <meta
-      name="twitter:image"
-      content="https://files.mybit.io/social/mybit_twitter_cover.png"
-    />
-
-    <meta property="og:title" content="MyBit" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://mybit.io/" />
-    <meta
-      property="og:image"
-      content="https://files.mybit.io/social/mybit_facebook_cover.png"
-    />
-    <meta
-      property="og:description"
-      content="Invest without a bank or broker and receive revenue instantly."
-    />
-    <meta property="og:site_name" content="MyBit" />
+    <meta name="theme-color" content="#ffffff">
     <title>MyBit Go</title>
+    <meta name="description" content="Invest without a bank or broker and receive revenue instantly.">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" sizes="310x310" href="/favicons/310x310.png">
+    <link rel="icon" sizes="192x192" href="/favicons/192x192.png">
+    <link rel="icon" sizes="180x180" href="/favicons/180x180.png">
+    <link rel="icon" sizes="144x144" href="/favicons/144x144.png">
+    <link rel="icon" sizes="152x152" href="/favicons/152x152.png">
+    <link rel="icon" sizes="150x150" href="/favicons/150x150.png">
+    <link rel="icon" sizes="120x120" href="/favicons/120x120.png">
+    <link rel="icon" sizes="114x114" href="/favicons/114x114.png">
+    <link rel="icon" sizes="96x96" href="/favicons/96x96.png">
+    <link rel="icon" sizes="76x76" href="/favicons/76x76.png">
+    <link rel="icon" sizes="72x72" href="/favicons/72x72.png">
+    <link rel="icon" sizes="70x70" href="/favicons/70x70.png">
+    <link rel="icon" sizes="60x60" href="/favicons/60x60.png">
+    <link rel="icon" sizes="57x57" href="/favicons/57x57.png">
+    <link rel="icon" sizes="48x48" href="/favicons/48x48.png">
+    <link rel="icon" sizes="36x36" href="/favicons/36x36.png">
+    <link rel="icon" sizes="32x32" href="/favicons/32x32.png">
+    <link rel="icon" sizes="16x16" href="/favicons/16x16.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@MyBit_DApp">
+    <meta name="twitter:title" content="MyBit">
+    <meta name="twitter:description" content="Invest without a bank or broker and receive revenue instantly.">
+    <meta name="twitter:creator" content="@MyBit_DApp">
+    <meta name="twitter:image" content="https://files.mybit.io/social/mybit_twitter_cover.png">
+    <meta property="og:title" content="MyBit">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://mybit.io">
+    <meta property="og:image" content="https://files.mybit.io/social/mybit_facebook_cover.png">
+    <meta property="og:description" content="Invest without a bank or broker and receive revenue instantly.">
+    <meta property="og:site_name" content="MyBit" />
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
-  <script src="https://widget-convert.bancor.network/v1"></script>
 </html>
