Replace all MyBit Go with MyBit

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       content="Invest without a bank or broker and receive revenue instantly."
     />
     <meta property="og:site_name" content="MyBit" />
-    <title>MyBit Go</title>
+    <title>MyBit</title>
     <script src="//gw.alipayobjects.com/os/antv/assets/data-set/0.8.6/data-set.min.js"></script>
   </head>
   <body>
